Add .vertical-divider class to divide menu navigation items
.vertical-divider class for expanded menu only (min-width: 992px)

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -142,7 +142,7 @@
         </div>
         <!--  End of Sports menu dropdown  -->
       </li>
-
+      <li class="vertical-divider"></li>
       <!--  Facilities  -->
       <li class="nav-item dropdown active-nav">
         <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/facilities" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
