--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <a class="navbar-brand cavs-link" href="http://athletics.kcc.edu"><img src="assets/img/cavaliers-logo.png" class="cavs-logo" alt="KCC Cavaliers Logo link to Athletics main page"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
