--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,10 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <a class="navbar-brand cavs-link" href="http://athletics.kcc.edu"><img src="assets/img/cavaliers-logo.png" class="cavs-logo" alt="KCC Cavaliers Logo link to Athletics main page"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse clear-cavs" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
       <li class="nav-item dropdown active-nav">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sports</a>
