--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,10 @@
 
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+        <!-- Link to Google Font's "Roboto" font -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <!-- Link to Google Font's "Open Sans" font -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="{{site.baseurl}}assets/css/main.css">
         <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
