Add a comment on how to add the Google Fonts into the css

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -1,3 +1,11 @@
+/*  TO USE GOOGLE FONTS FOR SITE:
+==============================================
+    for Open Sans font use:
+    font-family: 'Open Sans', sans-serif;
+
+    for Roboto for bold items:
+    font-family: 'Roboto', sans-serif;
+============================================== */
 h3 {
   font-size: 1.6em;
 }
