--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -141,7 +141,6 @@
         </div>
         <!--  End of Sports menu dropdown  -->
       </li>
-      <li class="vertical-divider"></li>
       <!--  Facilities  -->
       <li class="nav-item dropdown active-nav">
         <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/facilities" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
@@ -202,16 +201,15 @@
       </div>
       <!--  End of Facilities menu dropdown  -->
     </li>
-
     <!--  Recruitment  -->
-    <li class="nav-item">
+    <li class="nav-item nav-split">
       <a class="nav-link" href="http://athletics.kcc.edu/recruit">Recruitment</a>
     </li>
 
-    <!--  Donate  -->
+    <!--  Support Athletics  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/donate" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Donate</a>
-    <!--  Donate dropdown menu  -->
+      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support Athletics</a>
+    <!--  Support Athletics dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
         <div class="row">
@@ -224,7 +222,7 @@
           <div class="col-md-8">
             <ul class="nav flex-column">
             <li class="nav-list">
-              <div class="row nav-row donate-drop-pad">
+              <div class="row nav-row support-drop-pad">
                 <div class="col-md-12">
                   <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/cash-bash"><strong>Cash Bash</strong></a>
                 </div>
@@ -243,13 +241,13 @@
         </div>
       </div>
     </div>
-    <!--  End of Donate menu dropdown  -->
+    <!--  End of Support Athletics menu dropdown  -->
     </li>
 
-    <!--  About Athletics  -->
+    <!--  About  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Athletics</a>
-    <!--  About Athletics dropdown menu  -->
+      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/about" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+    <!--  About dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
         <div class="row">
@@ -295,7 +293,7 @@
         </div>
       </div>
     </div>
-    <!--  End of Donate menu dropdown  -->
+    <!--  End of Support Athletics menu dropdown  -->
     </li>
     <!--  End Navigation Menu links  -->
     </ul>
