--- a/assets/scss/3-modules/_global-nav.scss
+++ b/assets/scss/3-modules/_global-nav.scss
@@ -1,15 +1,23 @@
 .global-nav {
+  background-color: $primary-red;
   margin-left: 0;
   margin-right: 0;
   max-width: 100%;
   min-width: 100%;
   padding-bottom: 10px;
-  padding-left: 140px;
-  padding-top: 25px;
+  padding-left: 5%;
+  padding-top: 15px;
   width: 100%;
   height: 56px;
   position: fixed;
   z-index: 1040;
+}
+
+@media screen and (min-width: 992px) {
+  .global-nav {
+    background-color: transparent !important;
+    padding-top: 25px;
+  }
 }
 
 .kcc-logo {
