Add cavaliers logo img <tag> within <a> link tag
Give img logo a "center-logo" class to position centered and absoultely
Logo link brings user back to athletics.kcc.edu

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -2,6 +2,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a href="http://athletics.kcc.edu"><img src="assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
