Add style for .center-logo
Position absolutely to take out of page flow and center horizontally

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -169,3 +169,11 @@
 .nav-split {
   margin-right: 340px !important;
 }
+
+.center-logo {
+  left: 50%; // center the absolutely positioned item
+  margin-left: -105px; // offset the width of the item to make true center
+  margin-top: -115px;
+  position: absolute;
+  width: 210px;
+}
