Add margin-top comment

--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -173,7 +173,7 @@
 .center-logo {
   left: 50%; // center the absolutely positioned item
   margin-left: -105px; // offset the width of the item to make true center
-  margin-top: -115px;
+  margin-top: -115px; // position it vertically 
   position: absolute;
   width: 210px;
 }
