--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <!--  Slick.js stylesheet  -->
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
         <!-- Link to Google Font's "Roboto" font -->
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <!-- Link to Google Font's "Open Sans" font -->
