Create a landing-page and non-landing-page  background-color variables
Rename _index.scss as _home.scss and fix main.scss @import link
Set html/body page background color for athletics index page

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -35,3 +35,5 @@ $link-text: #0f3b63;
 $button-color: #0f3b63;
 $btn-hover: #005BAC;
 $btn-visited: #ffffff;
+$landing-bg: #e5e8ed;        // Landing page's background-color
+$default-bg: #ffffff;        // Background color for non-landing pages
