--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,7 @@
 /* Layouts */
 @import "4-layout/header";
 
-@import "5-pages/index/index";
+@import "5-pages/index/home";
 
 body {
   height: 4000px;
