Fix broken slick.js dependancy cdn links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,8 +9,9 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <!--  Slick.js stylesheet  -->
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.8.0/slick.css"/>
+        <!--  Slick.js v1.8.1 stylesheet followed by slick-theme stylesheet  -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
         <!-- Link to Google Font's "Roboto" font -->
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <!-- Link to Google Font's "Open Sans" font -->
