--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,11 +13,12 @@
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
         <!-- Link to Google Font's "Roboto" font -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
         <!-- Link to Google Font's "Open Sans" font -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="{{site.baseurl}}assets/css/main.css">
+        <!--  FontAwesome defered script link  -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     </head>
     <body id="page-top">
