--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -12,131 +12,114 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container drop-pad">
             <div class="row">
-              <div class="col-md-4 d-none d-md-block">
-                <a href="">
-                  <img src="assets/img/nav-1.png" alt="" class="img-fluid nav-img">
-                </a>
-              </div>
-              <!-- /.col-md-4  -->
-              <div class="col-md-8">
+              <div class="col-md-5">
                 <ul class="nav flex-column">
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball"><strong>Baseball</strong></a>
+                  <h3 class="menu-heading">Men's Sports</h3>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball"><strong>Baseball</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#news">News</a>
+                      </div>
                     </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#news">News</a>
+                  </li>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball"><strong>Basketball</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#news">News</a>
+                      </div>
                     </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
+                  </li>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Soccer</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
+                      </div>
                     </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball"><strong>Men&#39;s Basketball</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#news">News</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#schedule">Schedule</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Women&#39;s Basketball</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Soccer</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#news">News</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-                <li class="nav-list">
-                  <div class="row nav-row">
-                    <div class="col-md-4">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
-                    </div>
-                    <div class="col-md-2 d-none d-md-block">
-                      <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#stats">Stats</a>
-                    </div>
-                  </div>
-                </li>
-              </ul>
+                  </li>
+                </ul>
               </div>
-              <!-- /.col-md-8  -->
+              <div class="col-md-2"></div>
+              <div class="col-md-5">
+                <ul class="nav flex-column">
+                  <h3 class="menu-heading">Women's Sports</h3>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball"><strong>Basketball</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#news">News</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#news">News</a>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="nav-list">
+                    <div class="row nav-row">
+                      <div class="col-md-4">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
+                      </div>
+                      <div class="col-md-2 d-none d-md-block">
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#news">News</a>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
