--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 {% include head.html %}
   {% include global-nav.html %}
   {% include mega-nav.html %}
-  {% include header.html %}
+  {% include hero-slider.html %}
   {{ content }}
 {% include foot.html %}
