Style the mega-menu's .menu-heading h3 headings

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -9,3 +9,11 @@
 h3 {
   font-size: 1.6em;
 }
+
+.menu-heading {
+  color: $primary-red;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.2em;
+  font-weight: 700;
+  text-transform: uppercase;
+}
