Remove dropdown navigation link's carrots
Add hover color to background
Add primary-blue hover color to text

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a href="http://athletics.kcc.edu"><img src="assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
