Add .nav-link styling to use Roboto all caps font

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -17,3 +17,11 @@ h3 {
   font-weight: 700;
   text-transform: uppercase;
 }
+
+.nav-link {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
