Add floating NJCAA logo as link to region 4 standings

--- a/_includes/hero-slider.html
+++ b/_includes/hero-slider.html
@@ -1,5 +1,6 @@
-<div class="container">
-  <div class="row">
+<div class="container slider-container">
+  <a href="http://region4sports.com/landing/index"><img src="assets/img/njcaa-shieldlogo_150.png" class="njcaa-logo" alt="NJCAA logo, link to region 4 standings"></a>
+  <div class="row slider-row">
     <div class="col-md-12 heroSlider">
       <div>
         <img src="assets/img/header-bg.jpg" class="img-responsive slide-img" alt="">
