--- a/assets/scss/3-modules/_hero-slider.scss
+++ b/assets/scss/3-modules/_hero-slider.scss
@@ -1,3 +1,20 @@
+.slider-container {
+  margin-top: 142px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+@media screen and (min-width: 1400px) {
+  .slider-container {
+    max-width: 1300px;
+  }
+}
+
+.slider-row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .slide-img {
   position: relative;
   width: 100%;
@@ -45,4 +62,30 @@
   padding-right: 0;
   margin-left: 1px;
   margin-right: 1px;
+}
+
+.njcaa-logo {
+  position: absolute;
+  z-index: 1000;
+  right: 15%;
+  margin-top: 30px;
+}
+
+@media screen and (min-width:1200px) {
+  .njcaa-logo {
+    width: 175px;
+  }
+}
+
+@media screen and (min-width:1600px) {
+  .njcaa-logo {
+    right: 20%;
+    width: 200px;
+  }
+}
+
+@media screen and (min-width:1900px) {
+  .njcaa-logo {
+    right: 25%;
+  }
 }
