--- a/assets/scss/3-modules/_hero-slider.scss
+++ b/assets/scss/3-modules/_hero-slider.scss
@@ -64,11 +64,23 @@
   margin-right: 1px;
 }
 
-.njcaa-logo {
+.njcaa-link {
   position: absolute;
   z-index: 1000;
   right: 15%;
   margin-top: 30px;
+}
+
+@media screen and (min-width:1600px) {
+  .njcaa-link {
+    right: 20%;
+  }
+}
+
+@media screen and (min-width:1900px) {
+  .njcaa-link {
+    right: 25%;
+  }
 }
 
 @media screen and (min-width:1200px) {
@@ -79,13 +91,6 @@
 
 @media screen and (min-width:1600px) {
   .njcaa-logo {
-    right: 20%;
     width: 200px;
-  }
-}
-
-@media screen and (min-width:1900px) {
-  .njcaa-logo {
-    right: 25%;
   }
 }
