--- a/assets/scss/3-modules/_mega-nav.scss
+++ b/assets/scss/3-modules/_mega-nav.scss
@@ -13,7 +13,7 @@
     background-image: url(../../assets/img/menu-bg.png);
     background-position: center top;
     background-repeat: no-repeat;
-    background-size: 3840px;
+    background-size: 3840px 271px;
     margin-top: 0;
     min-height: 251px;
     height: 251px;
@@ -43,7 +43,6 @@
 
     /* remove the padding from the navbar so the dropdown hover state is not broken */
   .navbar {
-    padding-top:0px;
     padding-bottom:0px;
   }
 
