Add a non-breaking space between Athletics and Support

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -192,7 +192,7 @@
 
     <!--  Support Athletics  -->
     <li class="nav-item dropdown active-nav">
-      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support Athletics</a>
+      <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/support" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Support&#160;Athletics</a>
     <!--  Support Athletics dropdown menu  -->
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <div class="container">
