Add liquid include of footer.html
before {% include foot.html %}

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,5 @@
   {% include mega-nav.html %}
   {% include hero-slider.html %}
   {{ content }}
+  {% include footer.html %}
 {% include foot.html %}
