--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -37,3 +37,4 @@ $btn-hover: #005BAC;
 $btn-visited: #ffffff;
 $landing-bg: #e5e8ed;        // Landing page's background-color
 $default-bg: #ffffff;        // Background color for non-landing pages
+$footer-bg: #ffffff;         // Footer's background color
