Create .footer-heading class to style the footer's 'athletics.kcc.edu' link

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -25,3 +25,9 @@ h3 {
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+
+.footer-heading {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.6em;
+  font-weight: 900;
+}
