--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@
 @import "3-modules/mega-nav";
 @import "3-modules/global-nav";
 @import "3-modules/hero-slider";
+@import "3-modules/footer";
 
 /* Layouts */
 @import "4-layout/header";
