Replace all 'https://...' secure protocols with normall 'http://...'

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,27 +9,27 @@
       <div class="col-md-12">
         <div class="footer-social text-center">
           <span>
-            <a href="https://www.facebook.com/KankakeeCommunityCollege/" class="footer-social-links" target="_blank" rel="noopener">
+            <a href="http://www.facebook.com/KankakeeCommunityCollege/" class="footer-social-links" target="_blank" rel="noopener">
               <img src="assets/img/facebook-f_white.svg" class="footer-icons" alt="Facebook icon, link to the KCC Facebook page">
             </a>
           </span>
           <span>
-            <a href="https://twitter.com/KCCedu" class="footer-social-links" target="_blank" rel="noopener">
+            <a href="http://twitter.com/KCCedu" class="footer-social-links" target="_blank" rel="noopener">
               <img src="assets/img/twitter-white.svg" class="footer-icons" alt="Twitter icon, link to KCC Twitter page">
             </a>
           </span>
           <span>
-            <a href="https://www.instagram.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
+            <a href="http://www.instagram.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
               <img src="assets/img/instagram-white.svg" class="footer-icons" alt="Instagram icon, link to KCC Instagram page">
             </a>
           </span>
           <span>
-            <a href="https://www.youtube.com/user/KankakeeCommCollege" class="footer-social-links" target="_blank" rel="noopener">
+            <a href="http://www.youtube.com/user/KankakeeCommCollege" class="footer-social-links" target="_blank" rel="noopener">
               <img src="assets/img/youtube-white.svg" class="footer-icons" alt="YouTube icon, link to KCC YouTube page">
             </a>
           </span>
           <span>
-            <a href="https://www.pinterest.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
+            <a href="http://www.pinterest.com/kccedu/" class="footer-social-links" target="_blank" rel="noopener">
               <img src="assets/img/pinterest-p_white.svg" class="footer-icons" alt="Pinterest icon, link to KCC Pinterest page">
             </a>
           </span>
