--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -7,7 +7,7 @@
     <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
       <li class="nav-item dropdown active-nav">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sports</a>
+        <a class="nav-link dropdown-toggle" href="http://athletics.kcc.edu/sports" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sports</a>
         <!--  Sports dropdown menu  -->
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container drop-pad">
