Create _sports.scss styling specific to sports page
Port the styles from 'Portfolio' area of template

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -13,4 +13,6 @@
 /* Layouts */
 @import "4-layout/header";
 
+/* Page specific styling */
 @import "5-pages/index/home";
+@import "5-pages/sports/sports";
