Duplicate modules from _includes/ dir used in other pages.
Rename modules used in default with a default-* prefix
Adjust all links to images and stylesheets for permalink:pretty site structure

--- a/_includes/default-head.html
+++ b/_includes/default-head.html
@@ -19,6 +19,6 @@
         <!--  FontAwesome defered script link  -->
         <script defer src="http://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <!-- Place favicon.ico in the root directory -->
-        <link rel="stylesheet" href="../assets/css/main.css">
+        <link rel="stylesheet" href="{{site.baseurl}}assets/css/main.css">
     </head>
     <body id="page-top">
