--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
-{% include head.html %}
-  {% include global-nav.html %}
-  {% include mega-nav.html %}
+{% include default-head.html %}
+  {% include default-global-nav.html %}
+  {% include default-mega-nav.html %}
   {% include hero-slider.html %}
   {{ content }}
-  {% include footer.html %}
-{% include foot.html %}
+  {% include default-footer.html %}
+{% include default-foot.html %}
