Delete all default-... modules. Change all relative links to use page's base url
All relative link's now use the {{page.baseurl}} prefix

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -5,6 +5,6 @@
 <!--  Link to Slick.js javascript (must occur after jquery)  -->
 <script type="text/javascript" src="http://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
 <!-- custom compiled and minified javascript -->
-<script src="../assets/js/all.min.js"></script>
+<script src="{{page.baseurl}}assets/js/all.min.js"></script>
 </body>
 </html>
