--- a/_includes/hero-slider.html
+++ b/_includes/hero-slider.html
@@ -3,13 +3,13 @@
   <div class="row slider-row">
     <div class="col-md-12 heroSlider">
       <div>
-        <img src="assets/img/header-bg.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/header-bg.jpg" class="img-responsive slide-img" alt="">
       </div>
       <div>
-        <img src="assets/img/header-bg2.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/header-bg2.jpg" class="img-responsive slide-img" alt="">
       </div>
       <div>
-        <img src="assets/img/header-bg3.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/header-bg3.jpg" class="img-responsive slide-img" alt="">
       </div>
     </div>
   </div>
