--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -2,7 +2,7 @@
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a href="http://athletics.kcc.edu"><img src="../assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
+  <a href="http://athletics.kcc.edu"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
@@ -134,7 +134,7 @@
           <div class="row">
             <div class="col-md-4 d-none d-md-block">
               <a href="">
-                <img src="../assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+                <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
               </a>
             </div>
             <!-- /.col-md-4  -->
@@ -199,7 +199,7 @@
         <div class="row">
           <div class="col-md-4 d-none d-md-block">
             <a href="">
-              <img src="../assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+              <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
             </a>
           </div>
           <!-- /.col-md-4  -->
@@ -237,7 +237,7 @@
         <div class="row">
           <div class="col-md-4 d-none d-md-block">
             <a href="">
-              <img src="../assets/img/nav-1.png" alt="" class="img-fluid nav-img">
+              <img src="{{page.baseurl}}assets/img/nav-1.png" alt="" class="img-fluid nav-img">
             </a>
           </div>
           <!-- /.col-md-4  -->
