--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -34,16 +34,16 @@
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball"><strong>Basketball</strong></a>
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#roster">Roster</a>
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/basketball#news">News</a>
+                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#news">News</a>
                       </div>
                     </div>
                   </li>
