Change Cavaliers logo link from href="athletics.kcc.edu" to "{{page.baseurl}}"

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -2,7 +2,7 @@
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a href="http://athletics.kcc.edu"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
+  <a href="{{page.baseurl}}"><img src="{{page.baseurl}}assets/img/cavaliers-logo.png" class="center-logo" alt=""></a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mx-auto">
       <!--  Sports  -->
@@ -18,7 +18,7 @@
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball"><strong>Baseball</strong></a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
