Create _coaches.scss module for styling of "Coaches" section on sport landing pages

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 
 /* Layouts */
 @import "4-layout/header";
+@import "4-layout/coaches";
 
 /* Page specific styling */
 @import "5-pages/index/home";
