Replace all deprecated BS3 img-responsive classes with img-fluid
BS4 Doesnt use img-responsive. It now uses img-fluid

--- a/_includes/global-nav.html
+++ b/_includes/global-nav.html
@@ -9,7 +9,7 @@
   </div>  -->
   <div class="row">
     <div class="col-sm-6">
-      <a href="http://www.kcc.edu"><img src="{{page.baseurl}}assets/img/kankakee-community-college-word-logo.svg" class="img-responsive kcc-logo" alt="Kankakee Community College link to home page"></a>
+      <a href="http://www.kcc.edu"><img src="{{page.baseurl}}assets/img/kankakee-community-college-word-logo.svg" class="img-fluid kcc-logo" alt="Kankakee Community College link to home page"></a>
       <!--  <form class="form-inline">
         <input class="form-control mr-sm-2 local-search" type="search" placeholder="&#xF002; Search Athletics" aria-label="Search">
       </form>  -->
