--- a/_includes/baseball-slider.html
+++ b/_includes/baseball-slider.html
@@ -3,13 +3,13 @@
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
       <div>
-        <img src="{{page.baseurl}}assets/img/header-bg2.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/header-bg2.jpg" class="img-fluid slide-img" alt="">
       </div>
       <div>
-        <img src="{{page.baseurl}}assets/img/baseball-hero2.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/baseball-hero2.jpg" class="img-fluid slide-img" alt="">
       </div>
       <div>
-        <img src="{{page.baseurl}}assets/img/baseball-hero3.jpg" class="img-responsive slide-img" alt="">
+        <img src="{{page.baseurl}}assets/img/baseball-hero3.jpg" class="img-fluid slide-img" alt="">
       </div>
     </div>
   </div>
