--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -38,3 +38,4 @@ $btn-visited: #ffffff;
 $landing-bg: #e5e8ed;        // Landing page's background-color
 $default-bg: #ffffff;        // Background color for non-landing pages
 $footer-bg: #ffffff;         // Footer's background color
+$grey-heading: #666666;      // Grey headings used within page content
