--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+        <!-- Meta -->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- YouTube API -->
+        <meta name="yt-api-k" value="AIzaSyDqf_tGL2X636tuTEUjTLcxAdApjc6eiC0" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
