--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -39,3 +39,4 @@ $landing-bg: #e5e8ed;        // Landing page's background-color
 $default-bg: #ffffff;        // Background color for non-landing pages
 $footer-bg: #ffffff;         // Footer's background color
 $grey-heading: #666666;      // Grey headings used within page content
+$fa-color: $primary-red;
