Set fA icon's .f-color styles to $fa-color variable

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -36,6 +36,11 @@ p {
   font-family: 'Open Sans', sans-serif;
 }
 
+// Sets color for FontAwesome icons
+.f-color {
+  color: $fa-color;
+}
+
 /* Typography for Coaches sections on pages
 =========================================== */
 .coaches-heading {
