Create _hero-banner.scss module for static banner styling

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import "3-modules/global-nav";
 @import "3-modules/sliders";
 @import "3-modules/footer";
+@import "3-modules/hero-banner";
 
 /* Layout items */
 @import "4-layout/header";
