Fix ability to click facilities in mega menu:
Remove 'data-toggle="dropdown"' from facilities <a> tag:
Use of 'data-toggle="dropdown"' in <a> link elements prevents
link from being clickable.

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -127,7 +127,7 @@
       </li>
       <!--  Facilities  -->
       <li class="nav-item dropdown active-nav">
-        <a class="nav-link dropdown-toggle" href="{{site.baseurl}}/facilities" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Facilities</a>
+        <a class="nav-link dropdown-toggle" href="{{site.baseurl}}/facilities" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">Facilities</a>
       <!--  Facilities dropdown menu  -->
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
         <div class="container">
