Move img hover effect classes to own sass module:
Image hover effects are to be used on other pages.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "3-modules/sliders";
 @import "3-modules/footer";
 @import "3-modules/hero-banner";
+@import "3-modules/img-hover";
 
 /* Layout items */
 @import "4-layout/header";
