--- a/_includes/facil-banner.html
+++ b/_includes/facil-banner.html
@@ -1,5 +1,5 @@
-<section class="hero-container">
-  <div class="container">
+<section class="hero-section">
+  <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
         <img src="{{page.baseurl}}assets/img/facilities-banner.jpg" class="img-fluid hero" alt="Photo of the George S. Ryan Activities Center">
