--- a/assets/scss/3-modules/_hero-banner.scss
+++ b/assets/scss/3-modules/_hero-banner.scss
@@ -1,4 +1,4 @@
-.hero-container {
+.hero-section {
   margin-left: auto;
   margin-right: auto;
   margin-top: 142px;
@@ -7,9 +7,14 @@
 }
 
 @media screen and (min-width: 1400px) {
-  .hero-container {
+  .hero-section {
     max-width: 1300px;
   }
+}
+
+.hero-container {
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .hero-row {
