Update link to sports-facilities with {{site.baseurl}}

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -161,7 +161,7 @@
               <li class="nav-list">
                 <div class="row nav-row">
                   <div class="col-md-3">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities"><strong>Sports Facilities</strong></a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities"><strong>Sports Facilities</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
                     <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#ryan">Ryan&#160;Activities Center</a>
