Add to top comment about regular, bold, and black font-weights

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -5,6 +5,9 @@
 
     for Roboto for bold items and headings:
     font-family: 'Roboto', sans-serif;
+    Regular =   font-weight: 400
+    Bold =      font-weight: 700
+    Black =     font-weight: 900
 ============================================== */
 h3 {
   font-size: 1.6em;
