--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,8 +1,9 @@
 /* Variables */
 @import "0-tools/vars";
 
-/* Typography */
+/* Base items */
 @import "1-base/typography";
+@import "1-base/links";
 
 /* Modular components */
 @import "3-modules/mega-nav";
@@ -14,6 +15,7 @@
 
 /* Layout items */
 @import "4-layout/header";
+@import "4-layout/positioning";
 
 /* Page specific styling */
 /* Home/index page */
@@ -25,3 +27,5 @@
 /* Baseball page */
 @import "5-pages/baseball/coaches";
 @import "5-pages/baseball/modals";
+/* Facilities page */
+@import "5-pages/facilities/facilities";
